Added grid item containing tech stack. Fixed padding issues. Working on links for certificates.

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,36 +3,11 @@
   "name": "Portfolio Website",
   "icons": [
     {
-      "src": "/img/favicon/favicon-16x16.png",
-      "sizes": "16x16",
-      "type": "image/png"
-    },
-    {
-      "src": "/img/favicon/favicon-32x32.png",
-      "sizes": "32x32",
-      "type": "image/png"
-    },
-    {
-      "src": "/img/favicon/favicon.ico",
+      "src": "/favicon.ico",
       "sizes": "48x48",
       "type": "image/ico"
-    },
-    {
-      "src": "/img/favicon/apple-touch-icon.png",
-      "sizes": "180x180",
-      "type": "image/png"
-    },
-    {
-      "src": "/img/favicon/android-chrome-192x192.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "/img/favicon/android-chrome-512x512.png",
-      "sizes": "512x512",
-      "type": "image/png"
     }
-  ],
+  ]
   "start_url": ".",
   "display": "standalone",
   "theme_color": "#000000",
