--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.tsx",
   "scripts": {
     "start": "webpack-dev-server --mode=development",
-    "build": "webpack --mode=production"
+    "build": "NODE_ENV=production webpack --config ./webpack.config.js --mode=production"
   },
   "keywords": [],
   "author": "",
