--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "name": "portfolio",
   "version": "1.0.0",
   "main": "index.tsx",
+  "browser": {
+    "[module-name]": false   
+  },
   "scripts": {
     "start": "webpack-dev-server --mode=development",
-    "build": "NODE_ENV=production webpack --config ./webpack.config.js --mode=production"
+    "build": "NODE_ENV=production webpack --mode=production --config ./webpack.config.js"
   },
   "keywords": [],
   "author": "",
